--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,18 @@
 certifi==2019.6.16
 chardet==3.0.4
 Django==2.2.4
+django-appconf==1.0.3
+django-axes==5.0.13
+django-cleanup==4.0.0
+django-ipware==2.1.0
+django-ratelimit==2.0.0
+django-static-fontawesome==5.10.2
 djangorestframework==3.10.2
 docker==3.2.1
 docker-pycreds==0.4.0
 idna==2.8
+Markdown==3.1.1
+py-dateutil==2.2
 pytz==2019.2
 requests==2.22.0
 six==1.12.0
