--- a/requirements.txt
+++ b/requirements.txt
@@ -4,8 +4,10 @@ Django==2.2.4
 django-appconf==1.0.3
 django-axes==5.0.13
 django-cleanup==4.0.0
+django-compressor==2.3
 django-ipware==2.1.0
 django-ratelimit==2.0.0
+django-static-fontawesome==5.10.2
 djangorestframework==3.10.2
 docker==3.2.1
 docker-pycreds==0.4.0
@@ -13,7 +15,9 @@ idna==2.8
 Markdown==3.1.1
 py-dateutil==2.2
 pytz==2019.2
+rcssmin==1.0.6
 requests==2.22.0
+rjsmin==1.1.0
 six==1.12.0
 sqlparse==0.3.0
 urllib3==1.25.3
